--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -25,3 +25,17 @@ defaults
 listen stats :80
   stats enable
   stats uri /
+
+frontend localnodes
+    bind *:80
+    mode http
+    default_backend nodes
+    
+backend nodes
+    mode http
+    balance roundrobin
+    option forwardfor
+    http-request set-header X-Forwarded-Port %[dst_port]
+    http-request add-header X-Forwarded-Proto https if { ssl_fc }
+    option httpchk HEAD / HTTP/1.1\r\nHost:localhost        
+    server web01 10.1.156.29:8181 check
