--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -22,20 +22,10 @@ defaults
   errorfile 503 /etc/haproxy/errors/503.http
   errorfile 504 /etc/haproxy/errors/504.http
 
-listen stats :80
-  stats enable
-  stats uri /
-
-frontend localnodes
+frontend http-in
     bind *:80
-    mode http
-    default_backend nodes
-    
-backend nodes
-    mode http
-    balance roundrobin
-    option forwardfor
-    http-request set-header X-Forwarded-Port %[dst_port]
-    http-request add-header X-Forwarded-Proto https if { ssl_fc }
-    option httpchk HEAD / HTTP/1.1\r\nHost:localhost        
-    server web01 10.1.156.29:8181 check
+    default_backend neo4j
+
+backend neo4j
+    option httpchk GET /db/manage/server/ha/available
+    server s1 10.1.156.29:8181 maxconn 32
